--- a/website/index.html
+++ b/website/index.html
@@ -17,12 +17,15 @@
 
     html, body {
       height: 100%;
-      overflow-y: auto;       /* allow vertical scrolling */
-      overflow-x: hidden;     /* prevent side scrolling */
+      overflow-x: hidden;  /* Prevent side scrolling */
       font-family: Arial, sans-serif;
       background-color: white;
       color: black;
       user-select: none;
+    }
+
+    body {
+      overflow-y: auto;
     }
 
     header {
@@ -46,7 +49,7 @@
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      margin-top: 4px; /* Slightly lower */
+      margin-top: 2px; /* Slightly lower */
     }
 
     .menu-btn::before,
@@ -85,7 +88,7 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 12px;
+      top: 14px; /* Tiny bit lower */
       cursor: pointer;
       z-index: 1300;
     }
@@ -95,7 +98,7 @@
     }
 
     .cart-icon-container {
-      margin-top: -2px; /* Raised higher */
+      margin-top: -2px; /* Raised to align with logo */
       cursor: pointer;
       position: relative;
       z-index: 1300;
@@ -147,7 +150,7 @@
       height: calc(100vh - 56px);
       background-color: white;
       font-family: 'Cardo', serif;
-      transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: left 0.5s ease-in-out;
       z-index: 1100;
       color: black;
       font-size: 24px;
@@ -192,8 +195,8 @@
 
   <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
     <div>
-      <p>Sidebar content goes here. This text is padded so it does not go off-screen and stays below the header.</p>
-      <p>Additional links or text can go here too.</p>
+      <p>Sidebar content goes here. This text is padded and positioned to not overlap with the header.</p>
+      <p>Additional links or sections can be added below.</p>
     </div>
   </nav>
 
