--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
 
     html, body {
       height: 100%;
-      overflow-x: hidden; /* Prevent horizontal scrolling */
+      overflow-x: hidden;
       background-color: white;
       font-family: Arial, sans-serif;
     }
@@ -90,14 +90,14 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 12px; /* Lowered even more */
+      top: 10px;
       cursor: pointer;
       z-index: 1300;
     }
 
     .logo {
-      height: 34px;
-      filter: none; /* Black logo */
+      height: 40px;
+      filter: invert(1);
     }
 
     .cart-icon-container {
@@ -110,7 +110,7 @@
 
     .cart-icon {
       height: 22px;
-      filter: invert(0%);
+      filter: invert(100%);
       position: relative;
       top: 0;
       display: block;
@@ -132,20 +132,28 @@
     }
 
     .image-box {
-      margin-top: 56px; /* Push content below header */
+      margin-top: 56px;
       width: 100%;
       height: 400px;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      position: relative;
       background-color: #222;
+      overflow: hidden;
     }
 
-    .image-box img {
+    .slide-img {
+      position: absolute;
       width: 100%;
-      height: 100%;
+      height: 400px;
       object-fit: cover;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      pointer-events: none;
+    }
+
+    .slide-img.active {
+      opacity: 1;
+      pointer-events: auto;
+      z-index: 1;
     }
 
     .sidebar {
@@ -154,7 +162,7 @@
       left: -100%;
       width: 100vw;
       height: 100vh;
-      background-color: white;
+      background-color: #eee;
       font-family: 'Cardo', serif;
       transition: left 0.5s ease-in-out;
       z-index: 1100;
@@ -173,7 +181,7 @@
     }
 
     main {
-      display: none; /* Hide the old text content */
+      display: none;
     }
 
     @media (min-width: 768px) {
@@ -198,8 +206,10 @@
     </div>
   </header>
 
-  <div class="image-box" aria-label="Sample photo">
-    <img src="https://via.placeholder.com/1200x700?text=Sample+Photo" alt="Sample Photo" />
+  <div class="image-box" aria-label="Image slideshow">
+    <!-- 🔁 Replace these with your actual image links -->
+    <img class="slide-img active" src="https://via.placeholder.com/1200x700?text=Image+1" alt="Slide 1" />
+    <img class="slide-img" src="https://via.placeholder.com/1200x700?text=Image+2" alt="Slide 2" />
   </div>
 
   <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
@@ -242,6 +252,21 @@
         }
       });
     });
+
+    // ⏳ SLIDESHOW SCRIPT
+    const slides = document.querySelectorAll('.slide-img');
+    let currentIndex = 0;
+
+    function showSlide(index) {
+      slides.forEach((slide, i) => {
+        slide.classList.toggle('active', i === index);
+      });
+    }
+
+    setInterval(() => {
+      currentIndex = (currentIndex + 1) % slides.length;
+      showSlide(currentIndex);
+    }, 4000);
   </script>
 
 </body>
