--- a/website/index.html
+++ b/website/index.html
@@ -208,7 +208,7 @@
 
   <div class="image-box" aria-label="Image slideshow">
     <!-- 🔁 Replace these with your actual image links -->
-    <img class="slide-img active" src="https://via.placeholder.com/1200x700?text=Image+1" alt="Slide 1" />
+    <img class="slide-img active" src="https://github.com/mattscianna/mattscianna/blob/main/JERSEYRED.png?raw=true" alt="Slide 1" />
     <img class="slide-img" src="https://via.placeholder.com/1200x700?text=Image+2" alt="Slide 2" />
   </div>
 
